# CHIP-8.c

./: .dir-locals.el  README  configure.ac  configure.scan
lib/: disassembler.c
src/: Makefile.am  chip8dis.c  main.c
