#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
AC_INIT([chip8], [0.1.0], [ciudadperegrino@gmail.com], [https://github.com/citypilgrim/CHIP-8.c])

# turn on errors
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
# Checks for programs.
AC_PROG_CC

# gather macros
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([		#files to generate *.in for
Makefile
src/Makefile
])

# Checks for typedefs, structures, and compiler characteristics.
dnl AC_TYPE_UINT8_T

AC_OUTPUT
